fix: multi-input question spacing

--- a/app/assets/stylesheets/base/_surveyjs.scss
+++ b/app/assets/stylesheets/base/_surveyjs.scss
@@ -122,9 +122,9 @@ $radio-checkbox-width-height: rem-calc(39);
     }
   }
 
-  :not(.sv-paneldynamic__panel-wrapper) > .sv-panel {
+  .sv-panel {
     .sv-row {
-      &:first-child {
+      &:not(:last-child) {
         padding-bottom: 0;
       }
 
